# bmcweb-ng

./: .gitignore  ARCHITECTURE.md  BUILDING.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_STATUS.md  LICENSE  QEMU_SETUP.md  README.md  _commitmsg.txt  bmcweb-ng.service  bmcweb-ng.socket  config.toml
.cargo/: config.toml
scripts/: _build_rainier_now.sh  _check_deps.sh  _check_password.py  _compare.sh  _crack_pw.py  _e2e_test.py  _fix_perl_clockskew.bbappend  _get_shadow.sh  _launch_and_wait.py  _launch_qemu.py  _reduce_parallelism.py  _run_compare.sh  _run_e2e.sh  _run_validator.sh  _setup_metalocal.py  _smoke_tests.py  _test_serial.sh  _wait_bmcweb.py  _write_bbappend.py  build_openbmc_image.sh  build_p10bmc_image.sh  qemu_smoke_test.sh  run_bmcweb_ng_qemu.sh  run_qemu_tests.sh  run_rainier_qemu.sh  run_rainier_smoke.sh  run_validator.sh  setup_qemu_test.sh
src/: lib.rs  main.rs  persistent_data.rs
src/api/: dbus_rest.rs  mod.rs
src/api/redfish/: accounts.rs  aggregation_service.rs  certificate_service.rs  chassis.rs  event_service.rs  fabrics.rs  managers.rs  mod.rs  odata.rs  service_root.rs  sessions.rs  systems.rs  task_service.rs  telemetry_service.rs  update_service.rs
src/api/websocket/: mod.rs
src/auth/: basic.rs  middleware.rs  mod.rs  privilege.rs  session.rs
src/config/: mod.rs
src/dbus/: mod.rs
src/observability/: metrics.rs  mod.rs
src/protocol/: http.rs  mod.rs
src/services/: event.rs  mod.rs  task.rs  update.rs
